# hexahop-vita

./: .gitignore  CMakeLists.txt  README  README.md  TODO  autogen.sh  configure.ac
data/: Damfile  hex-a-hop.6  hex-a-hop.appdata.xml  hints.html  music-ending.ogg.xml  music-game-1.ogg.xml  music-game.flac.xml  music-game.ogg.xml  sound-builder-nonfree.ogg.xml  sound-collapse-nonfree.ogg.xml  sound-crack.ogg.xml  sound-death.ogg.xml  sound-death.wav.xml  sound-explode-big.flac.xml  sound-explode-big.ogg.xml  sound-explode-small.flac.xml  sound-explode-small.ogg.xml  sound-floater-enter.ogg.xml  sound-found-antiice-nonfree.ogg.xml  sound-found-jump-nonfree.ogg.xml  sound-ice.flac.xml  sound-ice.ogg.xml  sound-laser.ogg.xml  sound-lift-down-nonfree.ogg.xml  sound-lift-up-nonfree.ogg.xml  sound-spinner-nonfree.ogg.xml  sound-trampoline.ogg.xml  sound-used-antiice.ogg.xml  sound-used-jump.flac.xml  sound-used-jump.ogg.xml  sound-win.ogg.xml
debian/: control  copyright  rules
msc/: release.sh
po/: Makevars  bg.po  de.po  es.po  hex-a-hop.pot.comments  it.po  ja.po  nl.po  pl.po  ru.po  ta.po  vi.po
psp2/sce_sys/livearea/contents/: template.xml
src/: gfx.cpp  hex_puzzzle.cpp  i18n.cpp  i18n.h  joy.cpp  joy.h  menus.h  packfile.h  savestate.h  sfx.cpp  state.h  system-directory.c  system-directory.h  system-relative.c  system-relative.h  text.cpp  video.h
